# AERD_inference

./: .gitmodules  README.md  hubconf.py  pyproject.toml
.github/workflows/: release.yml
aerd/: __init__.py  labels.py  model.py  weights.py
aerd/beats/: beats_helper.py
aerd/utils/: __init__.py  _lab_pred.py
aerd_inference/: __init__.py  model.py  weights.py
aerd_inference/beats/: __init__.py  beats_helper.py
aerd_inference/utils/: _patch_wise_pred.py
tests/: conftest.py  smoke_test.py  test_hub.py  test_labels.py  test_model.py  test_weights.py
